--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,22 @@
-## springboot 自动加载集成druid连接池：druid-spring-boot-starter
-spring.datasource.url= jdbc:mysql://192.168.0.21:3306/carDB?useSSL=false&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useUnicode=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=cl
-spring.datasource.password=123456
+### springboot 自动加载集成druid连接池：druid-spring-boot-starter
+#spring.datasource.url= jdbc:mysql://192.168.0.21:3306/myDB?useSSL=false&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useUnicode=true
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=cl
+#spring.datasource.password=123456
+
+
+# second 数据源配置
+second.datasource.url=jdbc:mysql://192.168.0.21:3306/mySecondDB?useSSL=false&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useUnicode=true
+second.datasource.username=cl
+second.datasource.password=123456
+second.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+# master 数据源配置
+master.datasource.url=jdbc:mysql://192.168.0.21:3306/myDB?useSSL=false&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useUnicode=true
+master.datasource.username=cl
+master.datasource.password=123456
+master.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+server.port=8088
 
 ## spring集成druid连接池配置
 spring.datasource.druid.initial-size=5
@@ -12,3 +26,29 @@ spring.datasource.druid.test-while-idle=true
 spring.datasource.druid.max-active=60000
 spring.datasource.druid.async-init=true
 spring.datasource.druid.filters=stat,wall,slf4j
+
+#redis
+# Redis服务器地址
+spring.redis.host=192.168.0.21
+# Redis服务器连接端口
+spring.redis.port=16379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=123456
+#连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-active=8
+#连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=-1
+#连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle=8
+#连接池中最小空闲连接
+spring.redis.jedis.pool.min-idle=0
+#连接超时时间(毫秒)
+spring.redis.timeout=30000
+
+mybatis.mapper-locations=classpath:mapper/**/*.xml
+
+##mongodb
+#spring.profiles.active=8080
+#spring.data.mongodb.database=test
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=127.0.0.1
