--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <!--shiro-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.4.0</version>
+        </dependency>
         <!--mongodb-->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
